--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,15 +7,21 @@
 </head>
 <body>
 	<nav>
-		<ul>
-			<li><a href="#">Trang chủ</a></li>
-			<li><a href="#">Về chúng tôi</a> </li>
-			<li><a href="#">Marketing arena 2020</a></li>
-			<li><a href="#">Đăng kí tham gia</a></li>
-			<li><a href="#">Sự kiện</a></li>
-			<li><a href="#">Đối tác</a></li>
-			<li><a href="#">Liên hệ</a></li>
-		</ul>
+			<button class="header-button">Trang chủ</button>
+			<button class="header-button">Về chúng tôi</button>
+			<div class="marketing-menu">	
+				<button  class="header-button" id="marketing-menu">Marketing arena 2020</button>
+				<div id="dropdown-content">
+					<a href="#">Thể lệ phòng thi</a>
+  					<a href="#">Cơ cấu cuộc thi</a>
+ 					<a href="#">Cơ cấu giải thưởng</a>
+ 					<a href="#">Lưu ý dành cho thí sinh</a>
+				</div>
+			</div>
+			<button class="header-button">Đăng kí tham gia</button>
+			<button class="header-button">Sự kiện</button>
+			<button class="header-button">Đối tác</button>
+			<button class="header-button">Liên hệ</button>
 	</nav>
 </body>
 </html>
